chore(accounting): rename entity type
