# src/domain/accounting/types/accounting.types.ts
@@ -1,17 +1,18 @@
 import { ICurrency } from '../../currency/types/currency.types';
 import { IUser } from '../../user/types/user.types';
 
-export const EAccountingDomain = {
-  Organization: 'organization',
-  SoleTrader: 'sole_trader',
+export const EAccountingEntityType = {
   Individual: 'individual',
+  SoleTrader: 'sole_trader',
+  Company: 'company',
 } as const;
 
-export type UAccountingDomain =
-  (typeof EAccountingDomain)[keyof typeof EAccountingDomain];
+export type UAccountingEntityType =
+  (typeof EAccountingEntityType)[keyof typeof EAccountingEntityType];
 
-export interface IIndividualDomain {
+export interface IaccountingEntityTypeEntity {
   id: string;
+  type: UAccountingEntityType;
   owner: IUser;
   functionalCurrency: ICurrency;
   createdAt: Date;
